apps/pyApp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: py-app
  labels:
    istio.io/dataplane-mode: ambient
