apps/pyApp/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
  namespace: py-app
  labels:
    app: py-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
      - name: py-app
        image: alokhom/python-docker:1.29
        ports:
        - containerPort: 5000
