apps/pyApp/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-app
  namespace: py-app
spec:
  selector:
    app: py-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
