apps/pyApp/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app
  namespace: py-app
  annotations: {}
  #  cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #  - rps.systemtracker.no-ip.org
  #  secretName: rps-tls
  rules:
  - host: rps.systemtracker.no-ip.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-app
            port:
              number: 5000
